fix: link and horizontal scrollbar

--- a/docs/style.css
+++ b/docs/style.css
@@ -35,6 +35,7 @@ body, html {
     height: 100%;
     min-height: 100vh;
     width: 100vw;
+    overflow-x: clip;
 }
 
 /* Header */
